Development Portal (2018-03-17 shi)
==============================
Cleanup Dash data quality tables


Development Portal (2018-03-16 shi)
==============================
Add publisher link to IATI Registry on all pages
Updated footer with new email text and information
Updated all translations for updated email text
Fix table error messages to expand across colspan
Fix activity tables layout
Updated Print-friendly css
Updated all themes css
Updated footer email with subject
Updated site-wide emails with subject
Publisher link opens in new window


Development Portal (2018-03-15 shi)
==============================
Fixed result period dates to display even when there is no data
Added % to baseline in original theme
Updated 100percent time bar
Fixed new database logs link in Savi
Updated Print-friendly css
Updated slug_logs and slugs view on Dash


Development Portal (2018-03-14 shi)
==============================
Fixed word-break for datasets in Dash
Fixed word-break for countries table in Dash


Development Portal (2018-03-12 shi)
==============================
Added result_vocab codelist
Fixed result reference outside indicator


Development Portal (2018-03-06 shi)
==============================
Update result attr values layout
Update support for multiple references in result element
Add document-links in result element for 2.03
Minor css fixes to accomodate savi changes
Update Print-friendly css
Update link support for result reference vocab
Translate vocab numbers to standard descriptions from Registry
Update related-activity terms
Added more info for CSV download on map views
Added additional notes to map view footer


Development Portal (2018-02-27 shi)
==============================
Fixed activity list with long numbers


Development Portal (2018-02-10 shi)
==============================
Update related-activity codelist to 202
Change background-color of ended result
Update result date, span-narrative and indicator value font size