@@ -40,7 +40,7 @@
 #dash_body
 <div class="default">
 	<div class="left_block">
-		<div class="title">Publishers statistics for d-portal.org</div>
+		<div class="title_pub">Publishers statistics for d-portal.org</div>
 		<table class="pub">
 			<tr>
 				<th>Publisher Name</th>
@@ -163,7 +163,7 @@ a.head_title	{display:inline-block; font-size:1.3em; color:#343746; letter-spaci
 a.back_link		{display:block; font-size:1.0em; text-align:right; color:#343746;}
 .left_block		{display:inline-block; width:660px;}
 .right_block	{display:inline-block; width:300px;}
-.title			{font-size:1.5em; margin-bottom:20px;}
+.title_pub		{font-size:1.5em; margin-bottom:20px;}
 .title_snap		{font-size:1.5em; margin-bottom:20px;}
 .snap_wrap		{background-color:#111738; border-radius:4px; margin:0 auto; margin-bottom:30px; padding:20px; width:300px; box-sizing:border-box;}
 .snap_wrap.countries	{margin-top:25px;}
