@@ -1,6 +1,13 @@
+Development Portal (2018-03-18 shi)
+==============================
+Update Dash css
+Added arrow to registry link
+
+
 Development Portal (2018-03-17 shi)
 ==============================
 Cleanup Dash data quality tables
+Added IATI Registry links to Dash
 
 
 Development Portal (2018-03-16 shi)
